--- a/package.json
+++ b/package.json
@@ -11,16 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@agm/core": "^1.0.0-beta.5",
+    "@amcharts/amcharts4": "^4.4.1",
+    "@angular/animations": "^7.2.13",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@firebase/auth": "^0.10.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.10.1",
+    "firebase-app": "0.0.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
+    "sass-convert": "^0.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
